--- a/views/about/dialogs.html
+++ b/views/about/dialogs.html
@@ -15,7 +15,7 @@
   </div>
   <div class="modal-footer">
     <p class="pull-left text-error" data-bind="visible: aboutModel.textEdit.error">Misslyckades med att spara texten</p>
-    <a href="#" class="btn" data-dismiss="modal" data-bind="disable: aboutModel.textEdit.loading" data-dismiss="modal">Avbryt</a>
+    <a href="#" class="btn" data-bind="disable: aboutModel.textEdit.loading" data-dismiss="modal">Avbryt</a>
     <a href="#" class="btn btn-primary" data-bind="disable: aboutModel.textEdit.loading, click: aboutModel.textEdit.save">Spara</a>
   </div>
 </div>
@@ -36,7 +36,7 @@
   </div>
   <div class="modal-footer">
     <p class="pull-left text-error" data-bind="visible: aboutModel.protocolEdit.error">Misslyckades med att spara mötesanteckning</p>
-    <a href="#" class="btn" data-dismiss="modal" data-bind="disable: aboutModel.protocolEdit.loading" data-dismiss="modal">Avbryt</a>
+    <a href="#" class="btn" data-bind="disable: aboutModel.protocolEdit.loading" data-dismiss="modal">Avbryt</a>
     <a href="#" class="btn btn-primary" data-bind="disable: aboutModel.protocolEdit.loading, click: aboutModel.protocolEdit.save">Spara</a>
   </div>
 </div>
