--- a/views/forum/dialogs.html
+++ b/views/forum/dialogs.html
@@ -13,7 +13,7 @@
   </div>
   <div class="modal-footer">
     <p class="pull-left text-error" data-bind="visible: forumModel.categoryEdit.error">Misslyckades med att spara kategorin</p>
-    <a href="#" class="btn" data-dismiss="modal" data-bind="disable: forumModel.categoryEdit.loading" data-dismiss="modal">Avbryt</a>
+    <a href="#" class="btn" data-bind="disable: forumModel.categoryEdit.loading" data-dismiss="modal">Avbryt</a>
     <a href="#" class="btn btn-primary" data-bind="disable: forumModel.categoryEdit.loading, click: forumModel.categoryEdit.save">Spara</a>
   </div>
 </div>
@@ -34,7 +34,7 @@
   </div>
   <div class="modal-footer">
     <p class="pull-left text-error" data-bind="visible: forumModel.threadEdit.error">Misslyckades med att skapa tråden</p>
-    <a href="#" class="btn" data-dismiss="modal" data-bind="disable: forumModel.threadEdit.loading" data-dismiss="modal">Avbryt</a>
+    <a href="#" class="btn" data-bind="disable: forumModel.threadEdit.loading" data-dismiss="modal">Avbryt</a>
     <a href="#" class="btn btn-primary" data-bind="disable: forumModel.threadEdit.loading, click: forumModel.threadEdit.save">Spara</a>
   </div>
 </div>
@@ -51,7 +51,7 @@
   </div>
   <div class="modal-footer">
     <p class="pull-left text-error" data-bind="visible: forumModel.entryEdit.error">Misslyckades med att skapa inlägg</p>
-    <a href="#" class="btn" data-dismiss="modal" data-bind="disable: forumModel.entryEdit.loading" data-dismiss="modal">Avbryt</a>
+    <a href="#" class="btn" data-bind="disable: forumModel.entryEdit.loading" data-dismiss="modal">Avbryt</a>
     <a href="#" class="btn btn-primary" data-bind="disable: forumModel.entryEdit.loading, click: forumModel.entryEdit.save">Spara</a>
   </div>
 </div>
