--- a/views/news/dialogs.html
+++ b/views/news/dialogs.html
@@ -15,7 +15,7 @@
   </div>
   <div class="modal-footer">
     <p class="pull-left text-error" data-bind="visible: newsModel.newsEdit.error">Misslyckades med att spara nyheten</p>
-    <a href="#" class="btn" data-dismiss="modal" data-bind="disable: newsModel.newsEdit.loading" data-dismiss="modal">Avbryt</a>
+    <a href="#" class="btn" data-bind="disable: newsModel.newsEdit.loading" data-dismiss="modal">Avbryt</a>
     <a href="#" class="btn btn-primary" data-bind="disable: newsModel.newsEdit.loading, click: newsModel.newsEdit.save">Spara</a>
   </div>
 </div>
@@ -36,7 +36,7 @@
   </div>
   <div class="modal-footer">
     <p class="pull-left text-error" data-bind="visible: newsModel.programEdit.error">Misslyckades med att spara programpunkt</p>
-    <a href="#" class="btn" data-dismiss="modal" data-bind="disable: newsModel.programEdit.loading" data-dismiss="modal">Avbryt</a>
+    <a href="#" class="btn" data-bind="disable: newsModel.programEdit.loading" data-dismiss="modal">Avbryt</a>
     <a href="#" class="btn btn-primary" data-bind="disable: newsModel.programEdit.loading, click: newsModel.programEdit.save">Spara</a>
   </div>
 </div>
