--- a/views/members/view.html
+++ b/views/members/view.html
@@ -1,5 +1,5 @@
 
-<div class="row-fluid">
+<div class="row-fluid" data-bind="if: profileModel.user() !== false">
   <div class="span3">
     <ul class="nav nav-pills nav-stacked">
       <li class="nav-header">
