--- a/views/profile/view.html
+++ b/views/profile/view.html
@@ -31,5 +31,7 @@
     Du har administratörsrättigheter!
   </div>
 
+  <button type="button" class="btn" data-toggle="modal" data-target="#dialogProfilePasswordEdit" data-bind="disable: profileModel.disabled">Byt lösenord</button>
+
   <button type="button" class="btn" data-bind="disable: profileModel.disabled, click: profileModel.logoutSubmit">Logga ut</button>
 </div>
